status page looks okay on phone

--- a/apps/client/resources/public/stylesheets/main.css
+++ b/apps/client/resources/public/stylesheets/main.css
@@ -236,3 +236,10 @@ main#all-instances ul {
     list-style-type: none;
     margin-bottom: 3rem;
 }
+
+@media (max-width: 667px) {
+    main#instance article {
+        display: flex;
+        flex-flow: column;
+    }
+}
