validate repo and guests are not comma separated

--- a/apps/client/resources/public/stylesheets/main.css
+++ b/apps/client/resources/public/stylesheets/main.css
@@ -151,6 +151,11 @@ div.form-group {
     flex-flow: column;
 }
 
+div.form-group p.helper {
+    margin-top: 0.25rem;
+    font-size: 0.75rem;
+}
+
 form input[type=submit] {
     background: var(--color_action);
     drop-shadow: 1px 1px black;
