add env vars through form
Co-Authored-By: zach mandeville <zz@ii.coop>

--- a/apps/client/resources/public/stylesheets/main.css
+++ b/apps/client/resources/public/stylesheets/main.css
@@ -156,6 +156,13 @@ div.form-group p.helper {
     font-size: 0.75rem;
 }
 
+textarea#envvars {
+    font-size: 1em;
+    min-height: 20rem;
+    padding: 0.5rem;
+}
+
+
 form input[type=submit] {
     background: var(--color_action);
     drop-shadow: 1px 1px black;
