--- a/apps/client/resources/public/stylesheets/main.css
+++ b/apps/client/resources/public/stylesheets/main.css
@@ -255,12 +255,26 @@ main#instance section#status {
 }
 
 main#instance section#status h3 {
-    border-bottom: 1px solid var(--color_text);
     padding-left: 1rem;
+    border-top: 1px solid var(--color_text);
+    margin-bottom: 0;
+    padding-top: 1rem;
+}
+
+main#instance section#status h3:first-child {
+    border-top: none;
+    border-bottom: 1px solid var(--color_text);
+    margin-bottom: 1rem;
 }
 
 main#instance section#status p {
     padding-left: 1rem;
+}
+
+section#status ul {
+    list-style-type: none;
+    padding: 1rem;
+    margin-top: 0;
 }
 
 main#instance a.delete {
