add a nice comment

--- a/apps/client/resources/public/stylesheets/main.css
+++ b/apps/client/resources/public/stylesheets/main.css
@@ -267,6 +267,7 @@ main#instance section#status h3:first-child {
     margin-bottom: 1rem;
 }
 
+/* nice */
 main#instance section#status p {
     padding-left: 1rem;
 }
