update each element on status page dynamically with js

--- a/apps/client/resources/public/stylesheets/main.css
+++ b/apps/client/resources/public/stylesheets/main.css
@@ -41,6 +41,10 @@ pre {
     overflow-x: scroll;
 }
 
+.hidden {
+    display: none;
+}
+
 .action.delete {
     background: var(--color_action_alert);
 }
