Add GitHub account SSH key checking

--- a/apps/client/resources/public/stylesheets/main.css
+++ b/apps/client/resources/public/stylesheets/main.css
@@ -9,7 +9,7 @@
   --color_action_alert: tomato;
   --font_body: "Manrope", "Helvetica", sans-serif;
   --font-base: 20px;
-  --section-spacing: 3rem;
+  --section-spacing: 1rem;
   --hover_action: hue-rotate(30deg);
 }
 
@@ -116,7 +116,9 @@ div#more-info {
   margin-bottom: 20px;
 }
 
-div#more-info a {
+div#more-info a,
+div.missing-keys > p > a,
+#cta > div.missing-keys > p > a {
   font-size: var(--font-base);
   padding: 0;
   color: var(--color_action);
@@ -140,7 +142,7 @@ nav#login-options {
 
 #cta div {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 #cta a {
@@ -465,6 +467,20 @@ p.instanceCountMessage {
 
 ul#sites-available > li > a {
   line-break: anywhere;
+}
+
+div.missing-keys {
+  background-color: black;
+  color: white;
+  padding: 10px;
+  border-radius: 3px;
+  max-width: 300px;
+  margin-bottom: var(--section-spacing);
+}
+
+#action-buttons > a {
+  margin-right: 10px;
+  margin-left: 10px;
 }
 
 @keyframes fadeout {
