--- a/apps/client/resources/public/stylesheets/main.css
+++ b/apps/client/resources/public/stylesheets/main.css
@@ -134,9 +134,14 @@ nav#login-options {
   align-items: center;
 }
 
-#cta p.tagline {
+#cta p.home-title {
   font-size: 2rem;
   font-weight: 700;
+  text-align: center;
+  margin-bottom: var(--section-spacing);
+}
+
+#cta p.tagline {
   text-align: center;
   margin-bottom: var(--section-spacing);
 }
